--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,6 +1,4 @@
 
 databaseChangeLog:
   - include:
-      file: db/changelog/task-table.sql
-  - include:
-      file: db/changelog/sub-task-table.sql
+      file: db/changelog/desk-table.sql
