--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -2,3 +2,5 @@
 databaseChangeLog:
   - include:
       file: db/changelog/desk-table.sql
+  - include:
+      file: db/changelog/desk-table-color.sql
